--- a/.gitattributes
+++ b/.gitattributes
@@ -69,7 +69,7 @@
 *.jpeg               binary
 *.jpg                binary
 *.pict               binary
-*.png                binary
+*.png filter=lfs diff=lfs merge=lfs -text
 *.psd                binary
 *.tga filter=lfs diff=lfs merge=lfs -text
 *.tif                binary
