--- a/.gitattributes
+++ b/.gitattributes
@@ -45,7 +45,7 @@
 *.aiff               binary
 *.it                 binary
 *.mod                binary
-*.mp3                binary
+*.mp3 filter=lfs diff=lfs merge=lfs -text
 *.ogg                binary
 *.s3m                binary
 *.wav                binary
